--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "google-auth-library": "^2.0.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.10",
     "reactstrap": "^6.5.0"
