--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
+    "install": "cd client && yarn install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "keywords": [],
