--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "client": "cd client && yarn start",
-    "server": "nodemon server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^4.0.1",
+    "nodemon": "^1.11.0"
+  },
   "dependencies": {
     "bcrypt": "^3.0.2",
     "concurrently": "^4.0.1",
@@ -23,6 +29,7 @@
     "google-auth-library": "^2.0.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.10",
+    "path": "^0.12.7",
     "reactstrap": "^6.5.0"
   }
 }
