homepage added to json

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "keywords": [],
   "author": "",
+  "homepage":"https://inhabit-planner-app.herokuapp.com",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.0.1",
