--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [],
   "author": "",
-  "homepage":"https://inhabit-planner-app.herokuapp.com",
+  "homepage":"https://inhabit-planner-app.herokuapp.comher",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.0.1",
