--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
-    "seed": "node scripts/seedDB.js",
     "install": "cd client && yarn install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "keywords": [],
   "author": "",
-  "homepage":"https://inhabit-planner-app.herokuapp.comher",
+  "homepage":"https://inhabit-planner-app.herokuapp.com",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^4.0.1",
