--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-google-login": "^3.2.1",
